feat: adjust cloud

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,10 +14,14 @@ services:
       -bind=0.0.0.0
       -data-dir=/consul/data
     ports:
-      - "8500:8500"   # Web UI / HTTP API
+      - "8500:8500"  # Web UI / HTTP API
       - "8600:8600/udp" # DNS
       - "8600:8600/tcp"
-#    environment:
-#      CONSUL_BIND_INTERFACE: eth0
     volumes:
       - ./data/consul/data:/consul/data
+    networks:
+      - mcp_net  # 加入自定义网络
+
+networks:
+  mcp_net:
+    driver: bridge  # 使用桥接网络
