--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -7,9 +7,7 @@ on:
         required: true
         type: choice
         options:
-          - host
-          - mcp_local
-          - mcp_remote
+          - trigger
 
 jobs:
   job1:
