--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,13 +21,18 @@ services:
       - ./data/consul/data:/consul/data
     networks:
       - mcp_net  # 加入自定义网络
-#  postgres:
-#    image: m.daocloud.io/docker.io/bitnami/postgresql:latest
-#    container_name: mcp-postgres
-#    ports:
-#        - "5432:5432"
-#    env_file:
-#      -
+  postgres:
+    image: m.daocloud.io/docker.io/bitnami/postgresql:latest
+    container_name: mcp-postgres
+    ports:
+        - "5432:5432"
+    env_file:
+      - ./env/postgres.env
+    volumes:
+      - ./data/postgres:/var/lib/postgresql/data/
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+        - mcp_net
 
 networks:
   mcp_net:
